session 2 example 1 solved

--- a/Session1/Example2.html
+++ b/Session1/Example2.html
@@ -29,7 +29,7 @@ div { background-color: white;
 <h1> Elon Musk</h1>
 
 <p1> <div>
-    Elon Reeve <span style="color:blue"><b>Musk</b></span></b></span> FRS (/ËˆiËlÉ’n/ EE-lon; born <u>June 28, 1971</u>)
+    <B>Elon Reeve</B> <span style="color:blue"><b>Musk</b></span></b></span> FRS (/ËˆiËlÉ’n/ EE-lon; born <u>June 28, 1971</u>)
     is a business magnate and investor. He is the founder, <b><b></b><b>ceo</b></b>,
     and Chief Engineer at <span style=color:red><i><span style=color:red><i>SpaceX</i></span></i></span>; angel investor, <b><b>ceo</b></b>, and Product
     Architect of Tesla, Inc.; founder of The Boring Company; and 
